--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <p id="show"></p>
     <p id='showStyle'></p>
-<script src="index.js"></script>    
+    <p id="showIndex2"></p>
+    <p id="merge"></p>
+    <h3 id="pair"></h3>
+<script src="index.js"></script>   
+<!-- <script src="index2.js"></script>    -->
 </body>
 </html>
